--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Bullet Heaven (ECS)</title>
     <style>
       body {
         margin: 0;
         overflow: hidden;
       }
+
       canvas {
         display: block;
       }
     </style>
   </head>
+
   <body>
     <script type="module" src="/src/main.ts"></script>
   </body>
