#2 - added hit flash, pendingDamage, targetRef and tuned spawn/decor config

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
@@ -14,6 +17,9 @@
         margin: 0;
         overflow: hidden;
         background: #1a1a2e;
+        touch-action: none;
+        -webkit-user-select: none;
+        user-select: none;
       }
 
       canvas {
